--- a/Fake_Risk_v1.ipynb
+++ b/Fake_Risk_v1.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 501,
-   "id": "0741a313",
+   "execution_count": 1,
+   "id": "30c4cb0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 550,
-   "id": "d8dc98d9",
+   "execution_count": 24,
+   "id": "6df0df1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,6 +145,11 @@
     "        print(newGame.round)\n",
     "        print('CURRENT STATUS OF THE WORLD: \\n')\n",
     "        Regions.checkWorld(newGame.world)\n",
+    "        print('player 2 always recruits first!\\n')\n",
+    "        player2.recruit(newGame.world)\n",
+    "        print('time for player 1 to recruit\\n')\n",
+    "        player1.recruit(newGame.world)\n",
+    "        print('PLAYER 1 TURN: ')\n",
     "        player1.select(newGame.world)\n",
     "        player1.target(newGame.world)\n",
     "        player1.attack(newGame.world)\n",
@@ -156,6 +161,7 @@
     "            pass\n",
     "        print('CURRENT STATUS OF THE WORLD: \\n')\n",
     "        Regions.checkWorld(newGame.world)\n",
+    "        print('PLAYER 2 TURN: ')\n",
     "        player2.select(newGame.world)\n",
     "        player2.target(newGame.world)\n",
     "        player2.attack(newGame.world)\n",
@@ -173,8 +179,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 545,
-   "id": "2d21a440",
+   "execution_count": 16,
+   "id": "14bd9a31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +221,7 @@
     "        '''prints the status and number of troops of each region in the worldmap'''\n",
     "        for i in game:\n",
     "            print(f'the country {game[i].name} is controlled by {game[i].controlled_by}')\n",
-    "            print(f'with a total of {game[i].troopsRegion}')\n",
+    "            print(f'with a total of {game[i].troopsRegion} \\n\\n')\n",
     "               \n",
     "        \n",
     "        "
@@ -223,8 +229,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 546,
-   "id": "7e9694d9",
+   "execution_count": 17,
+   "id": "4a19d6db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,8 +246,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 547,
-   "id": "be5c309f",
+   "execution_count": 29,
+   "id": "0021b7c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,6 +321,22 @@
     "                world[self.currentTar.alias].troopsRegion = 1\n",
     "        else:\n",
     "            print('all your troops on this country died or fled..')\n",
+    "            \n",
+    "    def recruit(self, world):\n",
+    "        '''recruits 1 troop in one of the player controled regions'''\n",
+    "        while True:\n",
+    "            selection = input('select a country to gather troops from')\n",
+    "            if Regions.getAlias(selection,world) != False:\n",
+    "                regSelected = Regions.getAlias(selection,world)\n",
+    "            else:\n",
+    "                print('Non existant alias')\n",
+    "            if regSelected.isControlled() == self.name:\n",
+    "                #regSelected.troopsRegion += 1\n",
+    "                world[regSelected.alias].troopsRegion +=1\n",
+    "                print(f'{self.name} recruited 1 troop on {regSelected.name}\\n ')\n",
+    "                break\n",
+    "                \n",
+    "        \n",
     "    \n",
     "    def resetPlay(self):\n",
     "        '''sets to 0 both select and target'''\n",
@@ -325,8 +347,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "152dea6c",
+   "execution_count": 30,
+   "id": "8bf58646",
    "metadata": {},
    "outputs": [
     {
@@ -380,44 +402,215 @@
       "\n",
       "@At the end of 10 rounds, the player who controls more countries is the winner\n",
       "\n",
-      "Player 1, Choose your nameGerard\n",
-      "Player 2, Choose your nameDrareg\n",
+      "Player 1, Choose your nameG\n",
+      "Player 2, Choose your nameO\n",
       "1\n",
       "CURRENT STATUS OF THE WORLD: \n",
       "\n",
       "the country NorthAmerica is controlled by None\n",
-      "with a total of 0\n",
-      "the country CentralAmerica is controlled by Gerard\n",
-      "with a total of 2\n",
+      "with a total of 0 \n",
+      "\n",
+      "\n",
+      "the country CentralAmerica is controlled by G\n",
+      "with a total of 2 \n",
+      "\n",
+      "\n",
       "the country NorthAfrica is controlled by None\n",
-      "with a total of 0\n",
+      "with a total of 0 \n",
+      "\n",
+      "\n",
       "the country NorthPole is controlled by None\n",
-      "with a total of 0\n",
+      "with a total of 0 \n",
+      "\n",
+      "\n",
       "the country SouthAmerica is controlled by None\n",
-      "with a total of 0\n",
-      "the country WesternEurope is controlled by Gerard\n",
-      "with a total of 2\n",
-      "the country EasternEurope is controlled by Drareg\n",
-      "with a total of 3\n",
+      "with a total of 0 \n",
+      "\n",
+      "\n",
+      "the country WesternEurope is controlled by G\n",
+      "with a total of 2 \n",
+      "\n",
+      "\n",
+      "the country EasternEurope is controlled by O\n",
+      "with a total of 3 \n",
+      "\n",
+      "\n",
       "the country Asia is controlled by None\n",
-      "with a total of 0\n",
+      "with a total of 0 \n",
+      "\n",
+      "\n",
       "the country SouthAfrica is controlled by None\n",
-      "with a total of 0\n",
-      "the country Oceania is controlled by Drareg\n",
-      "with a total of 2\n",
+      "with a total of 0 \n",
+      "\n",
+      "\n",
+      "the country Oceania is controlled by O\n",
+      "with a total of 2 \n",
+      "\n",
+      "\n",
+      "player 2 always recruits first!\n",
+      "\n",
+      "select a country to gather troops fromO\n",
+      "O recruited 1 troop on Oceania\n",
+      " \n",
+      "time for player 1 to recruit\n",
+      "\n",
+      "select a country to gather troops fromCA\n",
+      "G recruited 1 troop on CentralAmerica\n",
+      " \n",
+      "PLAYER 1 TURN: \n",
       "select a country(by alias) where your troops ara stationedCA\n",
-      "you selected 2 troops on CentralAmerica\n",
+      "you selected 3 troops on CentralAmerica\n",
       "select a country(by alias) to attackNA\n",
       "your next attack will target NorthAmerica\n",
-      "Your total attack is 8 \n",
+      "Your total attack is 7 \n",
       "\n",
-      "opponent total defense is 3 \n",
+      "opponent total defense is 5 \n",
       "\n",
       "you win! you conquered NorthAmerica\n",
       "\n",
       "\n",
       "\n",
-      "\n"
+      "\n",
+      "Player 2: Press Enter to start your round\n",
+      "CURRENT STATUS OF THE WORLD: \n",
+      "\n",
+      "the country NorthAmerica is controlled by G\n",
+      "with a total of 1 \n",
+      "\n",
+      "\n",
+      "the country CentralAmerica is controlled by G\n",
+      "with a total of 3 \n",
+      "\n",
+      "\n",
+      "the country NorthAfrica is controlled by None\n",
+      "with a total of 0 \n",
+      "\n",
+      "\n",
+      "the country NorthPole is controlled by None\n",
+      "with a total of 0 \n",
+      "\n",
+      "\n",
+      "the country SouthAmerica is controlled by None\n",
+      "with a total of 0 \n",
+      "\n",
+      "\n",
+      "the country WesternEurope is controlled by G\n",
+      "with a total of 2 \n",
+      "\n",
+      "\n",
+      "the country EasternEurope is controlled by O\n",
+      "with a total of 3 \n",
+      "\n",
+      "\n",
+      "the country Asia is controlled by None\n",
+      "with a total of 0 \n",
+      "\n",
+      "\n",
+      "the country SouthAfrica is controlled by None\n",
+      "with a total of 0 \n",
+      "\n",
+      "\n",
+      "the country Oceania is controlled by O\n",
+      "with a total of 3 \n",
+      "\n",
+      "\n",
+      "PLAYER 2 TURN: \n",
+      "select a country(by alias) where your troops ara stationedEE\n",
+      "you selected 3 troops on EasternEurope\n",
+      "select a country(by alias) to attackNAF\n",
+      "country out of reach (not adjacent)\n",
+      "select a country(by alias) to attackSAF\n",
+      "your next attack will target SouthAfrica\n",
+      "Your total attack is 4 \n",
+      "\n",
+      "opponent total defense is 2 \n",
+      "\n",
+      "you win! you conquered SouthAfrica\n",
+      "\n",
+      " \n",
+      " Round 1 finished.\n",
+      " Starting round 2 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Player 1: Press enter to start new round\n",
+      "2\n",
+      "CURRENT STATUS OF THE WORLD: \n",
+      "\n",
+      "the country NorthAmerica is controlled by G\n",
+      "with a total of 1 \n",
+      "\n",
+      "\n",
+      "the country CentralAmerica is controlled by G\n",
+      "with a total of 3 \n",
+      "\n",
+      "\n",
+      "the country NorthAfrica is controlled by None\n",
+      "with a total of 0 \n",
+      "\n",
+      "\n",
+      "the country NorthPole is controlled by None\n",
+      "with a total of 0 \n",
+      "\n",
+      "\n",
+      "the country SouthAmerica is controlled by None\n",
+      "with a total of 0 \n",
+      "\n",
+      "\n",
+      "the country WesternEurope is controlled by G\n",
+      "with a total of 2 \n",
+      "\n",
+      "\n",
+      "the country EasternEurope is controlled by O\n",
+      "with a total of 3 \n",
+      "\n",
+      "\n",
+      "the country Asia is controlled by None\n",
+      "with a total of 0 \n",
+      "\n",
+      "\n",
+      "the country SouthAfrica is controlled by O\n",
+      "with a total of 1 \n",
+      "\n",
+      "\n",
+      "the country Oceania is controlled by O\n",
+      "with a total of 3 \n",
+      "\n",
+      "\n",
+      "player 2 always recruits first!\n",
+      "\n",
+      "select a country to gather troops fromSAF\n",
+      "O recruited 1 troop on SouthAfrica\n",
+      " \n",
+      "time for player 1 to recruit\n",
+      "\n",
+      "select a country to gather troops fromNA\n",
+      "G recruited 1 troop on NorthAmerica\n",
+      " \n",
+      "PLAYER 1 TURN: \n",
+      "select a country(by alias) where your troops ara stationedNA\n",
+      "you selected 2 troops on NorthAmerica\n",
+      "select a country(by alias) to attackNP\n",
+      "country out of reach (not adjacent)\n",
+      "select a country(by alias) to attackWE\n",
+      "you already control this country!\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "Interrupted by user",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/34/shcpc0k13hndsp05mm2j01th0000gn/T/ipykernel_38489/451043146.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/var/folders/34/shcpc0k13hndsp05mm2j01th0000gn/T/ipykernel_38489/1481276176.py\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m    132\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'PLAYER 1 TURN: '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    133\u001b[0m         \u001b[0mplayer1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mselect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnewGame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mworld\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 134\u001b[0;31m         \u001b[0mplayer1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnewGame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mworld\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    135\u001b[0m         \u001b[0mplayer1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mattack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnewGame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mworld\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    136\u001b[0m         \u001b[0mplayer1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresetPlay\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/var/folders/34/shcpc0k13hndsp05mm2j01th0000gn/T/ipykernel_38489/4062735971.py\u001b[0m in \u001b[0;36mtarget\u001b[0;34m(self, world)\u001b[0m\n\u001b[1;32m     25\u001b[0m         \u001b[0;34m'''checks if a country is a valid target for an attack'''\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m         \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m             \u001b[0mselection\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'select a country(by alias) to attack'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     28\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mRegions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetAlias\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mselection\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mworld\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m                 \u001b[0mregSelected\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRegions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetAlias\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mselection\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mworld\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/Cellar/jupyterlab/3.1.10/libexec/lib/python3.9/site-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m   1004\u001b[0m                 \u001b[0;34m\"raw_input was called, but this frontend does not support input requests.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1005\u001b[0m             )\n\u001b[0;32m-> 1006\u001b[0;31m         return self._input_request(\n\u001b[0m\u001b[1;32m   1007\u001b[0m             \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprompt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1008\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"shell\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/Cellar/jupyterlab/3.1.10/libexec/lib/python3.9/site-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m   1049\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1050\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1051\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Interrupted by user\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1052\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1053\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Invalid Message:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
      ]
     }
    ],
@@ -428,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86fea828",
+   "id": "a5059549",
    "metadata": {},
    "outputs": [],
    "source": []
